# blinkr

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.cursor/rules/: deploy-workflow.mdc
.github/workflows/: ci.yml  deploy-beta.yml  deploy.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.ci.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.production  .env.production.example  index.html  package.json  vite.config.ts
apps/web/src/: App.vue
apps/web/src/composables/: useUserSearch.ts  useWebSocket.ts
apps/web/src/lib/: aesthetic-themes.ts  api-error.ts  api.ts  background-db.ts  compress-image.ts  drop-files.ts  linkify.ts  media.ts  theme-catalog.ts  theme-engine.ts  theme-tokens.ts  themes.ts  wallpapers.ts
apps/web/src/router/: index.ts
apps/web/src/stores/: auth.ts  background.ts  chat.ts  theme.ts
apps/web/src/styles/: aesthetic-themes.css  main.css  themes.css
apps/web/src/views/: ChatView.vue  FriendsView.vue  LoginView.vue  (+4 more)
scripts/: deploy-beta.ps1  deploy.ps1  setup-beta-secrets.ps1  setup-github-infra.ps1  setup-github-secrets.ps1  sync-worker-secrets.sh  test-two-clients.ps1
workers/api/: .dev.vars.example  package.json  wrangler.toml
workers/api/migrations/: 0001_init.sql  0002_auth_log_and_search.sql  0003_message_retention_index.sql  0004_media_blobs.sql
workers/api/seed/: dev-users.sql
workers/api/src/: env.ts  index.ts  utils.ts
(+26 files in other folders)
