[package]
name = "blinkr"
version = "0.1.0"
description = "Blinkr — fast, modern text messaging"
authors = ["Blinkr"]
edition = "2021"

[lib]
name = "blinkr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin transitive dep — cookie 0.18.1 conflicts with time 0.3.48+
time = "=0.3.47"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
